--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,22 @@
     />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
     <title>React App</title>
+    <style>
+      *{
+        font-family: 'Roboto', sans-serif;
+      }
+      body{
+        margin: 0;
+      }
+    </style>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
+
 </html>
